--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,52 @@
-html,
-body {
+html {
 	height: 100%;
+}
+body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
 	letter-spacing: 0.8px;
 }
 
+#demo {
+	width: 300px;
+	height: 700px;
+	margin: auto;
+	overflow: hidden;
+	transform-origin: 0px 0px 0px;
+}
+
+#canvas {
+	position: relative;
+	top: 50px;
+	left: 0px;
+	width: 428px;
+	height: 889px;
+	background: none;
+	transform-origin: 0px 0px 0px;
+	transform: scale(0.7);
+}
+
+#iphone {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+}
+
+#visual {
+	position: absolute;
+	top: 109px;
+	left: 26.5px;
+	width: 377px;
+	height: 669px;
+	border: 0px;
+}
+
 #status-bar {
 	width: 100%;
+	height: 20px;
 	display: block;
 }
 
@@ -22,6 +60,7 @@ body {
 .facebook,
 .google {
 	text-align: center;
+	margin-bottom: 2%;
 }
 
 #hold-the-logo,
@@ -118,7 +157,7 @@ button:focus {
 	margin-bottom: 3%;
 	height: 40px;
 	border: solid 1px #8C8C8C;
-	font-size: 14px;
+	font-size: 16px;
 	border-radius: 8px;
 }
 
@@ -166,6 +205,7 @@ fieldset.or-line legend {
 
 #password-sign-up {
 	width: 72%;
+	margin-top: 5%;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -179,6 +219,11 @@ h4 {
 }
 
 .header {
+	position: fixed;
+	top: 0;
+}
+
+.top-bar {
 	display: block;
 	background-color: #FFFFFF;
 	opacity: .9;
@@ -202,6 +247,11 @@ h4 {
     border-radius: 25px;
 }
 
+.content {
+	margin-top: 64px;
+	margin-bottom: 50px;
+}
+
 .welcome {
 	display: block;
 	height: 100px;
@@ -221,7 +271,7 @@ h3 {
 
 h2 {
 	margin:0;
-	padding-top: 20px;
+	padding-top: 30px;
 	padding-bottom: 20px;
 	color: #000000;
 	font-size: 18px;
@@ -229,20 +279,23 @@ h2 {
 }
 
 .recipes {
-	margin-left: 4%;
-	margin-right: 4%;
-
+	position: relative;
+	width: 95%;
+	height: 425px;
+	text-align: center;
+	margin: auto;
 }
 
 .recipe-container {
 	position: relative;
-	width: 50%;
 	float: left;
-	margin-bottom: 2%;
+	margin-top: 4%;
+	margin-left: 4%;
+	margin-right: 4%;
 }
 
 .recipe-image {
-	display: block;
+	display: inline-block;
 	margin-left: auto;
 	margin-right: auto;
 	height: 150px;
@@ -259,19 +312,37 @@ h5 {
 .heart-outline {
 	position: absolute;
 	top: 5%;
-	left: 13%;
-	width: 18%;
-
+	left: 8%;
+	width: 20%;
 }
 
 .tab-bar {
-	position: fixed;
+  	position: fixed;
 	width: 100%;
 	bottom: 0px;
 	display: block;
 	background-color: #F9F9F9;
 	opacity: .9;
 	height: 50px;
-	box-shadow: 0px -0.5px 0px rgba(0, 0, 0, 0.7);
+	box-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
 	text-align: center;
+}
+
+.tab-bar a {
+	width: 33.33%;
+	float: left;
+	display: block;
+	color: #8C8C8C;
+	text-align: center;
+	padding-top: 1%;
+	text-decoration: none;
+}
+
+.tab-images {
+	height: 25px;
+}
+
+.tab-bar h5 {
+	margin: 0;
+	padding: 0;
 }
