--- a/styles/style.css
+++ b/styles/style.css
@@ -341,6 +341,7 @@ h5 {
 }
 
 .tab-bar {
+	z-index: 1000;
   	position: fixed;
 	width: 100%;
 	bottom: 0;
@@ -514,7 +515,7 @@ h1 {
 	float: left;
 }
 
-.text-field img {
+.filter-check {
 	height: 10px;
 	margin-right: 16px;
 	float: right;
@@ -523,4 +524,46 @@ h1 {
 
 .range {
 	height: 70px;
+	width: 100%;
+	display: block;
+}
+
+.slider {
+	width: 100%;
+	display: flex;
+	align-items: center;
+  	justify-content: center;
+  	padding-top: 20px;
+}
+
+.slider-text {
+  width: 80px;
+  margin-top: 2px;
+}
+
+#serving-slider-range,
+#prep-slider-range,
+#cooking-slider-range {
+  width: 40%;
+  height: 4px;
+  margin: 8px 32px 8px 32px;
+}
+
+#custom-handle {
+  position: relative;
+  bottom: 16px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+#custom-handle:focus {
+    outline:none;
+    border: 1px solid #8C8C8C;
+}
+
+.ui-slider-range.ui-corner-all.ui-widget-header {
+  background-color: #84ba4d;
 }
