--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,15 @@ body {
 	font-weight: 300;
 }
 
+.green {
+	background-color: #84ba4d;
+}
+
+.transparent-bar {
+	background-color: transparent !important;
+	opacity: 1;
+}
+
 #demo {
 	width: 300px;
 	height: 700px;
@@ -223,8 +232,28 @@ h4 {
 	display: inline-block;
 	color: #FFFFFF;
 	font-size: 14px;
-	text-decoration: underline;
+	text-decoration: underline; 
 	text-align: center;
+}
+
+.password-float {
+	float: left;
+}
+
+.sign-up-float {
+	float: right;
+}
+
+.sc{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: none;
+	z-index: 10;
+}
+.sc.selected{
+	display: block;
+	z-index: 11;
 }
 
 .header {
