--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
 	font-weight: 300;
 }
 
-.green {
+.green-background {
 	background-color: #84ba4d;
 }
 
@@ -193,15 +193,16 @@ button:focus {
   	width: 15px;
 }
 
-#sign-in-button {
+.submit {
 	width: 72%;
 	background-color: transparent;
-	margin-bottom: 5%;
+	margin-bottom: 20px;
 	height: 40px;
 	border: solid 1px #FFFFFF;
 	font-size: 18px;
 	color: #FFFFFF;
 	border-radius: 8px;
+	font-weight: 300;
 }
 
 fieldset.or-line {
@@ -236,12 +237,20 @@ h4 {
 	text-align: center;
 }
 
-.password-float {
+.left-float {
 	float: left;
 }
 
-.sign-up-float {
+.right-float {
 	float: right;
+}
+
+.left-text-align {
+	text-align: left;
+}
+
+.right-text-align {
+	text-align: right;
 }
 
 .sc{
@@ -281,6 +290,10 @@ h4 {
 	text-decoration: none;
 }
 
+.top-container.empty {
+	padding-top: 2px;
+}
+
 #hold-the-word {
 	position: relative;
 	margin-left: auto;
@@ -304,13 +317,29 @@ h4 {
 	margin-bottom: 50px;
 }
 
+.content.dashboard {
+	height: 585px;
+}
+
+.content.profile {
+	height: 460px;
+}
+
+.content.recipes-list {
+	height: 650px;
+}
+
+.content.filters {
+	height: 1155px;
+}
+
 .welcome {
 	display: block;
 	height: 100px;
 	border-bottom: solid .5px rgba(140, 140, 140, 0.7);
 }
 
-h3 {
+.welcome h3 {
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-top: 20px;
@@ -321,29 +350,35 @@ h3 {
 	text-align: center;
 }
 
+h3 {
+	color: #000000;
+	font-size: 16px;
+	text-align: center;
+	font-weight: 300;
+}
+
 h2 {
 	margin:0;
 	padding-top: 20px;
-	padding-bottom: 10px;
 	color: #000000;
 	font-size: 18px;
 	text-align: center;
+	font-weight: 300;
 }
 
 .recipes {
-	position: relative;
-	display: block;
-	width: 95%;
+	padding-top: 18px;
+	width: 100%;
 	text-align: center;
 	margin: auto;
 }
 
 .recipe-container {
+	display:inline-block;
 	position: relative;
-	float: left;
 	margin-top: 3%;
-	margin-left: 4%;
-	margin-right: 4%;
+	margin-left: 3%;
+	margin-right: 3%;
 }
 
 .recipe-image {
@@ -360,6 +395,10 @@ h5 {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	font-weight: 300;
+}
+
+.highlight {
+	color: #84ba4d;
 }
 
 .heart-outline {
@@ -436,6 +475,18 @@ h1 {
 	border-bottom: .5px solid #C8C7CC;
 }
 
+.text-field.overlap {
+	margin-top: -1px;
+}
+
+.text-field.header-conflict {
+	border-top: .5px solid #8C8C8C;
+}
+
+.text-field.bottom-overlap {
+	margin-bottom: -1px;
+}
+
 .text-field label {
 	float: left;
 	font-size: 18px;
@@ -469,18 +520,18 @@ h1 {
 
 .lifestyles {
 	position: relative;
-	width: 90%;
+	width: 100%;
 	height: 93px;
 	text-align: center;
 	margin: auto;
+	margin-top: 40px;
 }
 
 .lifestyle-container {
-	position: relative;
-	float: left;
-	margin-top: 3%;
-	margin-left: 2%;
-	margin-right: 2%;
+	margin-top: 10px;
+	margin-left: 6px;
+	margin-right: 6px;
+	display:inline-block;
 }
 
 .lifestyle-container h5 {
@@ -492,6 +543,40 @@ h1 {
 	display: inline-block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.lifestyles-edit {
+
+	position: relative;
+	margin-top: -1px;
+	width: 100%;
+	height: 420px;
+	border: .5px solid #C8C7CC;
+	background-color: #F3F3F3;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	display: none;
+}
+
+.lifestyles.edit{
+	width: 100%;
+	margin-top: 0;
+}
+
+.lifestyles.special {
+	width: 100%;
+	margin-top: 0;
+}
+
+.lifestyle-container.edit {
+	margin-left: 13px;
+	margin-right: 13px;
+}
+
+.lifestyle-container.special {
+	margin-left: 18px;
+	margin-right: 18px;
 }
 
 #search-icon,
@@ -586,6 +671,11 @@ h1 {
   height: 20px;
   background-color: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  margin-top: -4px;
+}
+
+#custom-handle.right-handle {
+	margin-top: -22px;
 }
 
 #custom-handle:focus {
@@ -595,4 +685,23 @@ h1 {
 
 .ui-slider-range.ui-corner-all.ui-widget-header {
   background-color: #84ba4d;
+}
+
+.lifestyles-edit h3{
+	font-style: italic;
+}
+
+#none-icon { 
+  	position: absolute;
+  	top: 8px;
+  	left: 13px;
+  	width: 25px;
+}
+
+.green {
+	border: solid 1px #84ba4d;
+	font-size: 18px;
+	color: #84ba4d;
+	width: 52%;
+	margin-top: 20px;
 }
