--- a/styles/style.css
+++ b/styles/style.css
@@ -1134,7 +1134,8 @@ h6 {
 }
 
 .email-popup,
-.share-popup {
+.share-popup,
+.edit-popup {
 	display: none;
 	position: fixed;
 	width: 100%;
@@ -1148,7 +1149,8 @@ h6 {
 }
 
 .email-popup img,
-.share-popup img {
+.share-popup img,
+.edit-popup img {
 	cursor: pointer;
 	width: 315px;
 	margin-top: 40%;
@@ -1178,4 +1180,76 @@ h6 {
 	font-size: 16px;
 	border-radius: 8px;
 	font-weight: 300;
+}
+
+.saved-field {
+	display: block;
+	height: 76px;
+	width: 100%;
+	border-top: .5px solid #C8C7CC;
+	border-bottom: .5px solid #C8C7CC;
+	cursor: pointer;
+	padding: 12px;
+}
+
+.saved-field.overlap {
+	margin-top: -1px;
+}
+
+.saved-field.header-conflict {
+	border-top: .5px solid #8C8C8C;
+}
+
+.saved-field.bottom-overlap {
+	margin-bottom: -1px;
+}
+
+.made-photo {
+	width: 75px;
+	margin-left: 12px;
+	float: left;
+}
+
+.recipe-title {
+	padding-top: 28px;
+	padding-bottom: 28px;
+	margin: 0;
+	margin-left: 12px;
+	float: left;
+	text-align: left;
+}
+
+p {
+	float: left;
+    margin: 0;
+    margin-left: 12px;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    font-size: 14px;
+	font-weight: 300;
+}
+
+.saved-icons {
+	float: right;
+	padding-top: 23px;
+	padding-bottom: 23px;
+	margin-right: 12px;
+}
+
+.saved-email {
+	width: 36px;
+	margin-right: 10px;
+}
+
+.saved-share {
+	width: 25px;
+	margin-right: 10px;
+}
+
+.edit-recipe {
+	float: right;
+	width: 25px;
+	margin-top: 10px;
+    margin-right: 15px;
+    cursor: pointer;
 }
