--- a/styles/style.css
+++ b/styles/style.css
@@ -14,20 +14,20 @@ body {
 	background-color: #84ba4d;
 }
 
-.transparent-bar {
+/*.transparent-bar {
 	background-color: transparent !important;
 	opacity: 1;
-}
+}*/
 
-#demo {
+/*#demo {
 	width: 300px;
 	height: 700px;
 	margin: auto;
 	overflow: hidden;
 	transform-origin: 0px 0px 0px;
-}
+}*/
 
-#canvas {
+/*#canvas {
 	position: relative;
 	top: 50px;
 	left: 0px;
@@ -36,32 +36,32 @@ body {
 	background: none;
 	transform-origin: 0px 0px 0px;
 	transform: scale(0.7);
-}
+}*/
 
-#iphone {
+/*#iphone {
 	position: absolute;
 	top: 0px;
 	left: 0px;
 	width: 100%;
 	height: 100%;
 }
-
-#visual {
+*/
+/*#visual {
 	position: absolute;
 	top: 109px;
 	left: 26.5px;
 	width: 377px;
 	height: 669px;
 	border: 0px;
-}
+}*/
 
-#status-bar {
+.status-bar {
 	width: 100%;
 	height: 20px;
 	display: block;
-	background-color: #FFFFFF;
+	/*background-color: #FFFFFF;
 	opacity: .9;
-	z-index: 1000;
+	z-index: 1000;*/
 }
 
 .logo {
@@ -264,6 +264,7 @@ h4 {
 }
 
 .header {
+	width: 100%;
 	position: fixed;
 	top: 0;
 	z-index: 1000;
