--- a/styles/style.css
+++ b/styles/style.css
@@ -14,54 +14,16 @@ body {
 	background-color: #84ba4d;
 }
 
-/*.transparent-bar {
+.transparent-bar {
 	background-color: transparent !important;
 	opacity: 1;
-}*/
-
-/*#demo {
-	width: 300px;
-	height: 700px;
-	margin: auto;
-	overflow: hidden;
-	transform-origin: 0px 0px 0px;
-}*/
-
-/*#canvas {
-	position: relative;
-	top: 50px;
-	left: 0px;
-	width: 428px;
-	height: 889px;
-	background: none;
-	transform-origin: 0px 0px 0px;
-	transform: scale(0.7);
-}*/
-
-/*#iphone {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 100%;
 }
-*/
-/*#visual {
-	position: absolute;
-	top: 109px;
-	left: 26.5px;
-	width: 377px;
-	height: 669px;
-	border: 0px;
-}*/
 
 .status-bar {
 	width: 100%;
 	height: 20px;
 	display: block;
-	/*background-color: #FFFFFF;
-	opacity: .9;
-	z-index: 1000;*/
+	background-color: #FFFFFF;
 }
 
 .logo {
@@ -274,8 +236,8 @@ h4 {
 	width: 100%;
 	display: block;
 	background-color: #FFFFFF;
-	opacity: .9;
-	height: 44px;
+/*	opacity: .9;
+*/	height: 44px;
 	box-shadow: 0px .5px 0px rgba(0, 0, 0, 0.7);
 	text-align: center;
 }
@@ -403,8 +365,8 @@ h5 {
 	bottom: 0;
 	display: block;
 	background-color: #F9F9F9;
-	opacity: .9;
-	height: 50px;
+/*	opacity: .9;
+*/	height: 50px;
 	box-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
 	text-align: center;
 }
@@ -545,7 +507,7 @@ h1 {
 	width: 100%;
 	height: 420px;
 	border: .5px solid #C8C7CC;
-	background-color: #F3F3F3;
+	background-color: #F9F9F9;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
@@ -978,10 +940,20 @@ h6 {
 	margin-bottom: -20px;
 }
 
+.final-instructions-list {
+	padding-right: 30px;
+}
+
 .ingredients-list li,
 .instructions-list li {
 	font-size: 16px;
 	margin-bottom: 20px;
+	text-align: left;
+}
+
+.final-ingredients-list li,
+.final-instructions-list li {
+	font-size: 16px;
 	text-align: left;
 }
 
@@ -1041,8 +1013,8 @@ h6 {
 	text-align: left;
 }
 
-.numpad,
-.sub-picker {
+#numpad,
+#sub-picker {
 	display: none;
 	width: 100%;
 	z-index: 2000;
@@ -1051,13 +1023,13 @@ h6 {
 	text-align: center;
 }
 
-.numpad {
+/*.numpad {
 	height: 260px;
-}
+}*/
 
-.sub-picker {
+/*.sub-picker {
 	height: 181px;
-}
+}*/
 
 .done-cancel {
 	height: 44px;
@@ -1076,13 +1048,13 @@ h6 {
 }
 
 .numpad-image {
-	height: 216px;
+	width: 100%;
 	padding: 0;
 	margin-bottom: -3px;
 }
 
 .picker-image {
-	height: 137px;
+	width: 100%;
 	padding: 0;
 	margin-bottom: -3px;
 }
@@ -1143,17 +1115,58 @@ h6 {
 	top: 66px;
 	z-index: 2000;
 	margin-bottom: 50px;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.7);
 	height: 100%;
 	max-height: calc(100% - 116px) ;
 	text-align: center;
 }
 
-.email-popup img,
-.share-popup img,
-.edit-popup img {
+.email-choice,
+.edit-choice {
+	width: 90%;
+	background-color: #FFFFFF;
+	opacity: 0.9;
+	border: 1px solid #FFFFFF;
+	border-radius: 13px;
+	text-align: center;
+	z-index: 2000;
+	height: 234px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.email-choice h3,
+.edit-choice h3 {
+	text-align: center;
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.edit-choice h3 {
+	width: 80%;
+}
+
+.email-text,
+.edit-text {
+	height: 90px;
+	margin-top: -9px;
+}
+
+.cell {
+	border-top: 1px solid #C8C7CC;
+	height: 45px;
+}
+
+.cell h3 {
+	text-align: center;
+	color: #84BA4D;
+	margin-top: 11px;
+}
+
+.share-popup img {
 	cursor: pointer;
-	width: 315px;
+	width: 90%;
 	margin-top: 40%;
 }
 
@@ -1253,4 +1266,108 @@ p {
 	margin-top: 10px;
     margin-right: 15px;
     cursor: pointer;
+}
+
+.onboarding-popup {
+	display: none;
+	position: fixed;
+	width: 100%;
+	z-index: 1000;
+	margin-bottom: 50px;
+	background-color: rgba(0, 0, 0, 0.7);
+	height: 100%;
+	max-height: calc(100% - 116px) ;
+	text-align: center;
+}
+
+.second-piece {
+	top: 66px;
+	height: 171px;
+	z-index: 0;
+}
+
+.first {
+	top: 235px;
+}
+
+.second {
+	top: 345px;
+}
+
+.third {
+	top: 66px;
+	height: 281px;
+}
+
+.placement {
+	bottom: 0;
+	position: absolute;
+	margin-bottom: 5%;
+}
+
+.onboarding-cancel {
+	position: relative; 
+	display: none;
+	z-index: 2000;
+}
+
+.onboarding-instructions {
+	text-align: center;
+	color: #FFFFFF;
+    font-size: 16px;
+	font-weight: 300;
+	width: 90%;
+}
+
+.onboarding-button,
+.onboarding2-button,
+.onboarding3-button {
+	color: #84BA4D;
+	font-weight: 400;
+}
+
+@media (max-width: 370px) {
+	#password-sign-up {
+		margin-top: 0;
+	}
+	
+	h4 {
+		font-size: 12px;
+	}
+
+	.recipe-image {
+		height: 125px;
+	}
+
+	.text-field input {
+		width: 75%;
+	}
+
+	.lifestyle-container h5 {
+		font-size: 12px;
+	}
+
+	.ingredients-list li,
+	.instructions-list li {
+		font-size: 14px;
+	}
+
+	.saved-field {
+		padding-left: 5px !important;
+		padding-right: 5px !important;
+		padding-bottom: 5px !important;
+		padding-top: 10px !important;
+	}
+
+	.made-photo {
+		width: 70px;
+	}
+
+	p {
+		font-size: 12px
+	}
+
+	.category h1 {
+		width: 60%;
+	}
 }
