--- a/styles/style.css
+++ b/styles/style.css
@@ -1215,6 +1215,10 @@ h6 {
 	margin-right: auto;
 }
 
+.email-choice a {
+	text-decoration: none;
+}
+
 .edit-choice h3 {
 	width: 80%;
 }
@@ -1266,6 +1270,10 @@ h6 {
 	font-size: 16px;
 	border-radius: 8px;
 	font-weight: 300;
+}
+
+.saved-recipes {
+	overflow-x: hidden;
 }
 
 .saved-field {
